overflow fix

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ margin: 0 !important;
 
 .background-color{
 	position:absolute;
-	width:100vw;
-	height: 100vh;
+	width:100%;
+	height: 100%;
 	z-index: -100;/*
 background: #FFEEEE;  
 background: -webkit-linear-gradient(to bottom, #DDEFBB 0, #FFEEEE 50%); 
@@ -70,6 +70,10 @@ a:hover{
 	body{
 		overflow:hidden;
 	}
+
+.background-color{
+	overflow:hidden;
+}
 
 		.text{
 				padding: 2vw 0 0 2vw;
